commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_7/toc.yml
@@ -77,7 +77,7 @@ items:
                 uid: 'excel!Excel.ConditionalFormatDirection:enum'
               - name: ConditionalFormatIconRuleType
                 uid: 'excel!Excel.ConditionalFormatIconRuleType:enum'
-              - name: Conditionalpresetcriteriarule
+              - name: ConditionalFormatPresetCriterion
                 uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
               - name: ConditionalFormatRuleType
                 uid: 'excel!Excel.ConditionalFormatRuleType:enum'
@@ -332,7 +332,7 @@ items:
             uid: 'excel!Excel.DataConnectionCollection:class'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -344,7 +344,7 @@ items:
             uid: 'excel!Excel.FunctionResult:class'
           - name: 函数
             uid: 'excel!Excel.Functions:class'
-          - name: Icon
+          - name: 图标
             uid: 'excel!Excel.Icon:interface'
           - name: IconSetConditionalFormat
             uid: 'excel!Excel.IconSetConditionalFormat:class'
@@ -360,7 +360,7 @@ items:
             uid: 'excel!Excel.PivotTableCollection:class'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
-          - name: Range
+          - name: 范围
             uid: 'excel!Excel.Range:class'
           - name: RangeBorder
             uid: 'excel!Excel.RangeBorder:class'
@@ -400,11 +400,11 @@ items:
             uid: 'excel!Excel.SettingsChangedEventArgs:interface'
           - name: SortField
             uid: 'excel!Excel.SortField:interface'
-          - name: Style
+          - name: 样式
             uid: 'excel!Excel.Style:class'
           - name: StyleCollection
             uid: 'excel!Excel.StyleCollection:class'
-          - name: Table
+          - name: 表格
             uid: 'excel!Excel.Table:class'
           - name: TableChangedEventArgs
             uid: 'excel!Excel.TableChangedEventArgs:interface'
@@ -430,7 +430,7 @@ items:
             uid: 'excel!Excel.Workbook:class'
           - name: WorkbookProtection
             uid: 'excel!Excel.WorkbookProtection:class'
-          - name: Worksheet
+          - name: 工作表
             uid: 'excel!Excel.Worksheet:class'
           - name: WorksheetActivatedEventArgs
             uid: 'excel!Excel.WorksheetActivatedEventArgs:interface'
@@ -500,7 +500,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -514,9 +514,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -528,7 +528,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -536,7 +536,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -544,7 +544,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -612,9 +612,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -626,7 +626,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -667,7 +667,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -675,5 +675,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
