--- a/docs/docs-ref-autogen/outlook_1_7/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/toc.yml
@@ -18,7 +18,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ItemNotificationMessageType:enum'
               - name: ItemType
                 uid: 'outlook!Office.MailboxEnums.ItemType:enum'
-              - name: Month
+              - name: 月
                 uid: 'outlook!Office.MailboxEnums.Month:enum'
               - name: OWAView
                 uid: 'outlook!Office.MailboxEnums.OWAView:enum'
@@ -30,7 +30,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.RecurrenceType:enum'
               - name: ResponseType
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
-              - name: Office.mailboxenums.restversion
+              - name: RestVersion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
               - name: SourceProperty
                 uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
@@ -44,15 +44,15 @@ items:
             uid: 'outlook!Office.AppointmentTimeChangedEventArgs:interface'
           - name: AttachmentDetails
             uid: 'outlook!Office.AttachmentDetails:interface'
-          - name: Body
+          - name: 正文
             uid: 'outlook!Office.Body:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: Contact
+          - name: 联系人
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: Diagnostics
+          - name: 诊断
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
@@ -62,7 +62,7 @@ items:
             uid: 'outlook!Office.Entities:interface'
           - name: 发件人
             uid: 'outlook!Office.From:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -74,13 +74,13 @@ items:
             uid: 'outlook!Office.MeetingSuggestion:interface'
           - name: MessageCompose
             uid: 'outlook!Office.MessageCompose:interface'
-          - name: Messageread.html
+          - name: MessageRead
             uid: 'outlook!Office.MessageRead:interface'
           - name: NotificationMessageDetails
             uid: 'outlook!Office.NotificationMessageDetails:interface'
           - name: NotificationMessages
             uid: 'outlook!Office.NotificationMessages:interface'
-          - name: Organizer
+          - name: 组织者
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
@@ -90,7 +90,7 @@ items:
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
           - name: RecipientsChangedFields
             uid: 'outlook!Office.RecipientsChangedFields:interface'
-          - name: 循环
+          - name: 定期
             uid: 'outlook!Office.Recurrence:interface'
           - name: RecurrenceChangedEventArgs
             uid: 'outlook!Office.RecurrenceChangedEventArgs:interface'
@@ -110,7 +110,7 @@ items:
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
-          - name: Time
+          - name: 时间
             uid: 'outlook!Office.Time:interface'
           - name: UserProfile
             uid: 'outlook!Office.UserProfile:interface'
@@ -162,7 +162,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -176,9 +176,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -190,7 +190,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -198,7 +198,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -206,7 +206,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -274,9 +274,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -288,7 +288,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -329,7 +329,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -337,5 +337,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
