--- a/docs/docs-ref-autogen/word_1_3/toc.yml
+++ b/docs/docs-ref-autogen/word_1_3/toc.yml
@@ -9,11 +9,11 @@ items:
           - name: 枚举
             uid: ''
             items:
-              - name: Alignment
+              - name: 对齐方式
                 uid: 'word!Word.Alignment:enum'
               - name: BodyType
                 uid: 'word!Word.BodyType:enum'
-              - name: BorderLocation
+              - name: borderLocation
                 uid: 'word!Word.BorderLocation:enum'
               - name: BorderType
                 uid: 'word!Word.BorderType:enum'
@@ -51,7 +51,7 @@ items:
                 uid: 'word!Word.RangeLocation:enum'
               - name: SelectionMode
                 uid: 'word!Word.SelectionMode:enum'
-              - name: Style
+              - name: 样式
                 uid: 'word!Word.Style:enum'
               - name: TapObjectType
                 uid: 'word!Word.TapObjectType:enum'
@@ -61,7 +61,7 @@ items:
                 uid: 'word!Word.VerticalAlignment:enum'
           - name: 应用程序
             uid: 'word!Word.Application:class'
-          - name: Body
+          - name: 正文
             uid: 'word!Word.Body:class'
           - name: ContentControl
             uid: 'word!Word.ContentControl:class'
@@ -89,11 +89,11 @@ items:
             uid: 'word!Word.ListCollection:class'
           - name: ListItem
             uid: 'word!Word.ListItem:class'
-          - name: Paragraph
+          - name: 段落
             uid: 'word!Word.Paragraph:class'
           - name: ParagraphCollection
             uid: 'word!Word.ParagraphCollection:class'
-          - name: Range
+          - name: 范围
             uid: 'word!Word.Range:class'
           - name: RangeCollection
             uid: 'word!Word.RangeCollection:class'
@@ -101,11 +101,11 @@ items:
             uid: 'word!Word.RequestContext:class'
           - name: SearchOptions
             uid: 'word!Word.SearchOptions:class'
-          - name: 分区
+          - name: 节
             uid: 'word!Word.Section:class'
           - name: SectionCollection
             uid: 'word!Word.SectionCollection:class'
-          - name: Table
+          - name: 表格
             uid: 'word!Word.Table:class'
           - name: TableBorder
             uid: 'word!Word.TableBorder:class'
@@ -167,7 +167,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -181,9 +181,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -195,7 +195,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -203,7 +203,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -211,7 +211,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -279,9 +279,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -293,7 +293,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -334,7 +334,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -342,5 +342,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
