--- a/docs/docs-ref-autogen/excel_1_11/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_11/toc.yml
@@ -139,7 +139,7 @@ items:
                 uid: 'excel!Excel.ConditionalFormatDirection:enum'
               - name: ConditionalFormatIconRuleType
                 uid: 'excel!Excel.ConditionalFormatIconRuleType:enum'
-              - name: Conditionalpresetcriteriarule
+              - name: ConditionalFormatPresetCriterion
                 uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
               - name: ConditionalFormatRuleType
                 uid: 'excel!Excel.ConditionalFormatRuleType:enum'
@@ -223,7 +223,7 @@ items:
                 uid: 'excel!Excel.PivotFilterTopBottomCriterion:enum'
               - name: PivotLayoutType
                 uid: 'excel!Excel.PivotLayoutType:enum'
-              - name: Placement
+              - name: 位置
                 uid: 'excel!Excel.Placement:enum'
               - name: PrintComments
                 uid: 'excel!Excel.PrintComments:enum'
@@ -578,7 +578,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -602,7 +602,7 @@ items:
             uid: 'excel!Excel.HeaderFooter:class'
           - name: HeaderFooterGroup
             uid: 'excel!Excel.HeaderFooterGroup:class'
-          - name: Icon
+          - name: 图标
             uid: 'excel!Excel.Icon:interface'
           - name: IconSetConditionalFormat
             uid: 'excel!Excel.IconSetConditionalFormat:class'
@@ -656,7 +656,7 @@ items:
             uid: 'excel!Excel.PivotTableStyleCollection:class'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
-          - name: Range
+          - name: 范围
             uid: 'excel!Excel.Range:class'
           - name: RangeAreas
             uid: 'excel!Excel.RangeAreas:class'
@@ -718,7 +718,7 @@ items:
             uid: 'excel!Excel.SettingCollection:class'
           - name: SettingsChangedEventArgs
             uid: 'excel!Excel.SettingsChangedEventArgs:interface'
-          - name: 型号
+          - name: 形状
             uid: 'excel!Excel.Shape:class'
           - name: ShapeActivatedEventArgs
             uid: 'excel!Excel.ShapeActivatedEventArgs:interface'
@@ -750,13 +750,13 @@ items:
             uid: 'excel!Excel.SlicerStyleCollection:class'
           - name: SortField
             uid: 'excel!Excel.SortField:interface'
-          - name: Style
+          - name: 样式
             uid: 'excel!Excel.Style:class'
           - name: StyleCollection
             uid: 'excel!Excel.StyleCollection:class'
-          - name: Subtotals
+          - name: 分类汇总
             uid: 'excel!Excel.Subtotals:interface'
-          - name: Table
+          - name: 表格
             uid: 'excel!Excel.Table:class'
           - name: TableAddedEventArgs
             uid: 'excel!Excel.TableAddedEventArgs:interface'
@@ -804,7 +804,7 @@ items:
             uid: 'excel!Excel.WorkbookCreated:class'
           - name: WorkbookProtection
             uid: 'excel!Excel.WorkbookProtection:class'
-          - name: Worksheet
+          - name: 工作表
             uid: 'excel!Excel.Worksheet:class'
           - name: WorksheetActivatedEventArgs
             uid: 'excel!Excel.WorksheetActivatedEventArgs:interface'
@@ -888,7 +888,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -902,9 +902,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -916,7 +916,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -924,7 +924,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -932,7 +932,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -1000,9 +1000,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -1014,7 +1014,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -1055,7 +1055,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -1063,5 +1063,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
