--- a/docs/docs-ref-autogen/excel_1_12/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_12/toc.yml
@@ -143,7 +143,7 @@ items:
                 uid: 'excel!Excel.ConditionalFormatDirection:enum'
               - name: ConditionalFormatIconRuleType
                 uid: 'excel!Excel.ConditionalFormatIconRuleType:enum'
-              - name: Conditionalpresetcriteriarule
+              - name: ConditionalFormatPresetCriterion
                 uid: 'excel!Excel.ConditionalFormatPresetCriterion:enum'
               - name: ConditionalFormatRuleType
                 uid: 'excel!Excel.ConditionalFormatRuleType:enum'
@@ -235,7 +235,7 @@ items:
                 uid: 'excel!Excel.PivotFilterType:enum'
               - name: PivotLayoutType
                 uid: 'excel!Excel.PivotLayoutType:enum'
-              - name: Placement
+              - name: 位置
                 uid: 'excel!Excel.Placement:enum'
               - name: PrintComments
                 uid: 'excel!Excel.PrintComments:enum'
@@ -600,11 +600,11 @@ items:
             uid: 'excel!Excel.DataValidationRule:interface'
           - name: DateTimeDataValidation
             uid: 'excel!Excel.DateTimeDataValidation:interface'
-          - name: 格式
+          - name: DatetimeFormatInfo
             uid: 'excel!Excel.DatetimeFormatInfo:class'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -628,7 +628,7 @@ items:
             uid: 'excel!Excel.HeaderFooter:class'
           - name: HeaderFooterGroup
             uid: 'excel!Excel.HeaderFooterGroup:class'
-          - name: Icon
+          - name: 图标
             uid: 'excel!Excel.Icon:interface'
           - name: IconSetConditionalFormat
             uid: 'excel!Excel.IconSetConditionalFormat:class'
@@ -694,7 +694,7 @@ items:
             uid: 'excel!Excel.PivotValueFilter:interface'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
-          - name: Range
+          - name: 范围
             uid: 'excel!Excel.Range:class'
           - name: RangeAreas
             uid: 'excel!Excel.RangeAreas:class'
@@ -758,7 +758,7 @@ items:
             uid: 'excel!Excel.SettingCollection:class'
           - name: SettingsChangedEventArgs
             uid: 'excel!Excel.SettingsChangedEventArgs:interface'
-          - name: 型号
+          - name: 形状
             uid: 'excel!Excel.Shape:class'
           - name: ShapeActivatedEventArgs
             uid: 'excel!Excel.ShapeActivatedEventArgs:interface'
@@ -790,13 +790,13 @@ items:
             uid: 'excel!Excel.SlicerStyleCollection:class'
           - name: SortField
             uid: 'excel!Excel.SortField:interface'
-          - name: Style
+          - name: 样式
             uid: 'excel!Excel.Style:class'
           - name: StyleCollection
             uid: 'excel!Excel.StyleCollection:class'
-          - name: Subtotals
+          - name: 分类汇总
             uid: 'excel!Excel.Subtotals:interface'
-          - name: Table
+          - name: 表格
             uid: 'excel!Excel.Table:class'
           - name: TableAddedEventArgs
             uid: 'excel!Excel.TableAddedEventArgs:interface'
@@ -846,7 +846,7 @@ items:
             uid: 'excel!Excel.WorkbookProtection:class'
           - name: WorkbookRangeAreas
             uid: 'excel!Excel.WorkbookRangeAreas:class'
-          - name: Worksheet
+          - name: 工作表
             uid: 'excel!Excel.Worksheet:class'
           - name: WorksheetActivatedEventArgs
             uid: 'excel!Excel.WorksheetActivatedEventArgs:interface'
@@ -934,7 +934,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -948,9 +948,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -962,7 +962,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -970,7 +970,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -978,7 +978,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -1046,9 +1046,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -1060,7 +1060,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -1101,7 +1101,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -1109,5 +1109,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
