--- a/docs/docs-ref-autogen/outlook/toc.yml
+++ b/docs/docs-ref-autogen/outlook/toc.yml
@@ -34,7 +34,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ItemType:enum'
               - name: LocationType
                 uid: 'outlook!Office.MailboxEnums.LocationType:enum'
-              - name: Month
+              - name: 月
                 uid: 'outlook!Office.MailboxEnums.Month:enum'
               - name: OWAView
                 uid: 'outlook!Office.MailboxEnums.OWAView:enum'
@@ -46,7 +46,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.RecurrenceType:enum'
               - name: ResponseType
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
-              - name: Office.mailboxenums.restversion
+              - name: RestVersion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
               - name: SourceProperty
                 uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
@@ -66,7 +66,7 @@ items:
             uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
-          - name: Body
+          - name: 正文
             uid: 'outlook!Office.Body:interface'
           - name: 类别
             uid: 'outlook!Office.Categories:interface'
@@ -74,11 +74,11 @@ items:
             uid: 'outlook!Office.CategoryDetails:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: Contact
+          - name: 联系人
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: Diagnostics
+          - name: 诊断
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
@@ -96,7 +96,7 @@ items:
             uid: 'outlook!Office.InternetHeaders:interface'
           - name: IsAllDayEvent
             uid: 'outlook!Office.IsAllDayEvent:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -114,7 +114,7 @@ items:
             uid: 'outlook!Office.MeetingSuggestion:interface'
           - name: MessageCompose
             uid: 'outlook!Office.MessageCompose:interface'
-          - name: Messageread.html
+          - name: MessageRead
             uid: 'outlook!Office.MessageRead:interface'
           - name: NotificationMessageAction
             uid: 'outlook!Office.NotificationMessageAction:interface'
@@ -124,7 +124,7 @@ items:
             uid: 'outlook!Office.NotificationMessages:interface'
           - name: OfficeThemeChangedEventArgs
             uid: 'outlook!Office.OfficeThemeChangedEventArgs:interface'
-          - name: Organizer
+          - name: 组织者
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
@@ -134,7 +134,7 @@ items:
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
           - name: RecipientsChangedFields
             uid: 'outlook!Office.RecipientsChangedFields:interface'
-          - name: 循环
+          - name: 定期
             uid: 'outlook!Office.Recurrence:interface'
           - name: RecurrenceChangedEventArgs
             uid: 'outlook!Office.RecurrenceChangedEventArgs:interface'
@@ -148,7 +148,7 @@ items:
             uid: 'outlook!Office.ReplyFormData:interface'
           - name: RoamingSettings
             uid: 'outlook!Office.RoamingSettings:interface'
-          - name: Sensitivity
+          - name: 敏感度
             uid: 'outlook!Office.Sensitivity:interface'
           - name: SeriesTime
             uid: 'outlook!Office.SeriesTime:interface'
@@ -160,7 +160,7 @@ items:
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
-          - name: Time
+          - name: 时间
             uid: 'outlook!Office.Time:interface'
           - name: UserProfile
             uid: 'outlook!Office.UserProfile:interface'
@@ -212,7 +212,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -226,9 +226,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -240,7 +240,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -248,7 +248,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -256,7 +256,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -324,9 +324,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -338,7 +338,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -379,7 +379,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -387,5 +387,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
