--- a/docs/docs-ref-autogen/outlook_1_8/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/toc.yml
@@ -28,7 +28,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.ItemType:enum'
               - name: LocationType
                 uid: 'outlook!Office.MailboxEnums.LocationType:enum'
-              - name: Month
+              - name: 月
                 uid: 'outlook!Office.MailboxEnums.Month:enum'
               - name: OWAView
                 uid: 'outlook!Office.MailboxEnums.OWAView:enum'
@@ -40,7 +40,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.RecurrenceType:enum'
               - name: ResponseType
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
-              - name: Office.mailboxenums.restversion
+              - name: RestVersion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
               - name: SourceProperty
                 uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
@@ -60,7 +60,7 @@ items:
             uid: 'outlook!Office.AttachmentDetailsCompose:interface'
           - name: AttachmentsChangedEventArgs
             uid: 'outlook!Office.AttachmentsChangedEventArgs:interface'
-          - name: Body
+          - name: 正文
             uid: 'outlook!Office.Body:interface'
           - name: 类别
             uid: 'outlook!Office.Categories:interface'
@@ -68,11 +68,11 @@ items:
             uid: 'outlook!Office.CategoryDetails:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: Contact
+          - name: 联系人
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: Diagnostics
+          - name: 诊断
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
@@ -88,7 +88,7 @@ items:
             uid: 'outlook!Office.From:interface'
           - name: InternetHeaders
             uid: 'outlook!Office.InternetHeaders:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -106,13 +106,13 @@ items:
             uid: 'outlook!Office.MeetingSuggestion:interface'
           - name: MessageCompose
             uid: 'outlook!Office.MessageCompose:interface'
-          - name: Messageread.html
+          - name: MessageRead
             uid: 'outlook!Office.MessageRead:interface'
           - name: NotificationMessageDetails
             uid: 'outlook!Office.NotificationMessageDetails:interface'
           - name: NotificationMessages
             uid: 'outlook!Office.NotificationMessages:interface'
-          - name: Organizer
+          - name: 组织者
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
@@ -122,7 +122,7 @@ items:
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
           - name: RecipientsChangedFields
             uid: 'outlook!Office.RecipientsChangedFields:interface'
-          - name: 循环
+          - name: 定期
             uid: 'outlook!Office.Recurrence:interface'
           - name: RecurrenceChangedEventArgs
             uid: 'outlook!Office.RecurrenceChangedEventArgs:interface'
@@ -144,7 +144,7 @@ items:
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
-          - name: Time
+          - name: 时间
             uid: 'outlook!Office.Time:interface'
           - name: UserProfile
             uid: 'outlook!Office.UserProfile:interface'
@@ -196,7 +196,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -210,9 +210,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -224,7 +224,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -232,7 +232,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -240,7 +240,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -308,9 +308,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -322,7 +322,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -363,7 +363,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -371,5 +371,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
