--- a/docs/docs-ref-autogen/outlook_1_2/outlook/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/outlook/office.body.yml
@@ -66,6 +66,8 @@ items:
 
       `prependAsync` 方法将指定的字符串插入项目正文的开头。 插入后，光标将返回相对于插入内容的原始位置。
 
+      使用 HTML 格式的正文时，请务必注意，客户端可能会修改传递给的值， `prependAsync` 以使其能够通过其呈现引擎高效呈现。 这意味着，对方法的后续调用返回的值 `Body.getAsync` 不一定完全包含之前在方法中传递的值 `prependAsync` 。
+
       在 HTML 标记中添加链接时，您可以通过 `id` 在锚点上设置属性来禁用联机链接预览 (<!-- -->&lt;<!-- -->a<!-- -->&gt;<!-- -->) 到 "LPNoLP" (请参阅 **示例部分的示例)** 。
 
       \[[API 集：邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
